@@ -207,9 +207,11 @@ update_info_from_link (NautilusDesktopIconFile *icon_file)
 	nautilus_file_set_display_name (file,
 					display_name, NULL, TRUE);
 	g_free (display_name);
-	
-	g_free (file->details->custom_icon);
-	file->details->custom_icon = nautilus_desktop_link_get_icon (link);
+
+	if (file->details->icon != NULL) {
+		g_object_unref (file->details->icon);
+	}
+	file->details->icon = nautilus_desktop_link_get_icon (link);
 	g_free (file->details->activation_uri);
 	file->details->activation_uri = nautilus_desktop_link_get_activation_uri (link);
 	file->details->got_link_info = TRUE;
