@@ -65,7 +65,7 @@ NautilusDesktopLink *   nautilus_desktop_link_new_from_volume    (GnomeVFSVolume
 NautilusDesktopLinkType nautilus_desktop_link_get_link_type      (NautilusDesktopLink     *link);
 char *                  nautilus_desktop_link_get_file_name      (NautilusDesktopLink     *link);
 char *                  nautilus_desktop_link_get_display_name   (NautilusDesktopLink     *link);
-char *                  nautilus_desktop_link_get_icon           (NautilusDesktopLink     *link);
+GIcon *                 nautilus_desktop_link_get_icon           (NautilusDesktopLink     *link);
 char *                  nautilus_desktop_link_get_activation_uri (NautilusDesktopLink     *link);
 gboolean                nautilus_desktop_link_get_date           (NautilusDesktopLink     *link,
 								  NautilusDateType         date_type,
